When Path Is Too Long Fix

--- a/Flask/app/static/css/menu/menu.css
+++ b/Flask/app/static/css/menu/menu.css
@@ -87,12 +87,11 @@
 .info-path{
     width: 50%;
     max-width: 50%;
+    white-space: nowrap;
 }
 
 .info-path-text
 {
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .info-path-text > * {
